@@ -1,64 +1,62 @@
 package ru.star.bank.service;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 import ru.star.bank.dto.DynamicRecommendationDto;
 import ru.star.bank.entity.DynamicRecommendationEntity;
 import ru.star.bank.mapper.DynamicRecommendationMapper;
 import ru.star.bank.repository.DynamicRecommendationRepository;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-@ExtendWith(MockitoExtension.class)
 public class DynamicRecommendationServiceTest {
 
-    @Mock
     private DynamicRecommendationRepository repository;
-
-    @Mock
     private DynamicRecommendationMapper mapper;
-
-    @InjectMocks
     private DynamicRecommendationService service;
+
+    @BeforeEach
+    void setUp() {
+        repository = mock(DynamicRecommendationRepository.class);
+        mapper = new DynamicRecommendationMapper();
+        service = new DynamicRecommendationService(repository, mapper);
+    }
 
     @Test
     void testAddDynamicRecommendation() {
-        UUID productId = UUID.randomUUID();
+        DynamicRecommendationDto dto = new DynamicRecommendationDto("Prod", UUID.randomUUID(), "Text", null);
+        DynamicRecommendationEntity entity = mapper.dynamicRecommendationDtoToEntity(dto);
+        when(repository.save(any())).thenReturn(entity);
 
-        DynamicRecommendationDto dto = new DynamicRecommendationDto();
-        dto.setProduct_id(productId);
-        dto.setProduct_name("Test Product");
-        dto.setProduct_text("Test Recommendation");
-        dto.setRule(Collections.emptyList());
+        DynamicRecommendationDto saved = service.addDynamicRecommendation(dto);
+        assertEquals(dto.getProduct_name(), saved.getProduct_name());
+    }
 
-        DynamicRecommendationEntity entity = new DynamicRecommendationEntity();
-        entity.setProductId(productId);
-        entity.setProductName("Test Product");
-        entity.setProductText("Test Recommendation");
-        entity.setRules(Collections.emptyList());
+    @Test
+    void testGetAllDynamicRecommendations() {
+        DynamicRecommendationEntity entity1 = new DynamicRecommendationEntity("Prod1", UUID.randomUUID(), "Text1", null);
+        DynamicRecommendationEntity entity2 = new DynamicRecommendationEntity("Prod2", UUID.randomUUID(), "Text2", null);
+        when(repository.findAll()).thenReturn(List.of(entity1, entity2));
 
-        DynamicRecommendationEntity savedEntity = new DynamicRecommendationEntity();
-        savedEntity.setProductId(productId);
-        savedEntity.setProductName("Test Product");
-        savedEntity.setProductText("Test Recommendation");
-        savedEntity.setRules(Collections.emptyList());
-        savedEntity.setId(UUID.randomUUID());
+        List<DynamicRecommendationDto> all = service.getAllDynamicRecommendations();
+        assertEquals(2, all.size());
+    }
 
-        when(mapper.dynamicRecommendationDtoToEntity(dto)).thenReturn(entity);
-        when(repository.save(entity)).thenReturn(savedEntity);
-        when(mapper.dynamicRecommendationEntityToDto(savedEntity)).thenReturn(dto);
+    @Test
+    void testDeleteDynamicRecommendation() {
+        UUID id = UUID.randomUUID();
+        DynamicRecommendationEntity entity = new DynamicRecommendationEntity("Prod", id, "Text", null);
+        when(repository.findAll()).thenReturn(List.of(entity));
 
-        DynamicRecommendationDto result = service.addDynamicRecommendation(dto);
-
-        assertEquals(dto.getProduct_id(), result.getProduct_id());
-        assertEquals(dto.getProduct_name(), result.getProduct_name());
-        assertEquals(dto.getProduct_text(), result.getProduct_text());
+        service.deleteDynamicRecommendation(id);
+        verify(repository, times(1)).delete(entity);
     }
 }
